# shell

./: .gitignore  Cargo.toml  README.md  codecov.yml  pixi.toml  typos.toml
.github/workflows/: coverage.yml  release.yml  rust-linting.yml  rust-tests.yml  typos.yml
crates/deno_task_shell/: .rustfmt.toml  Cargo.toml
crates/deno_task_shell/src/: grammar.pest  lib.rs  parser.rs
crates/deno_task_shell/src/shell/: command.rs  execute.rs  fs_util.rs  mod.rs  test.rs  test_builder.rs  types.rs
crates/deno_task_shell/src/shell/commands/: args.rs  break_cmd.rs  cat.rs  cd.rs  continue_cmd.rs  cp_mv.rs  echo.rs  eval.rs  executable.rs  exit.rs  export.rs  head.rs  local_cmd.rs  mkdir.rs  mod.rs  printf.rs  pwd.rs  read_cmd.rs  return_cmd.rs  rm.rs  shift.rs  sleep.rs  trap.rs  unset.rs  xargs.rs
crates/deno_task_shell/src/shell/snapshots/: deno_task_shell__shell__test__multiline.snap
crates/shell/: Cargo.toml  pixi.toml
crates/shell/data/completions/: git.json
crates/shell/src/: commands.rs  completion.rs  execute.rs  helper.rs  lib.rs  main.rs  repl.rs
crates/shell/src/commands/: command_cmd.rs  date.rs  mod.rs  printenv.rs  set.rs  time.rs  touch.rs  uname.rs  which.rs
crates/tests/: Cargo.toml
crates/tests/src/: conda_activation_tests.rs  lib.rs  test_builder.rs  test_runner.rs
crates/tests/test-data/: arithmetic.sh  brace_expansion.sh  builtins.sh  case.sh  case_real_world.sh  conditions.sh  echo.sh  functions.sh  heredoc.sh  loop.sh  source.sh  variable_expansion.sh
scripts/: arithmetic.sh  case_1.sh  exit.sh  for_loop.sh  if_else.sh  multiline.sh  script_2.sh  script_3.sh  script_4.sh  script_5.sh  script_6.sh  source.sh  test.sh  test_conda_activation.sh  test_set.sh  tilde_expansion.sh  while_loop.sh
