[package]
name = "deno_task_shell"
version = "0.17.0"
authors = ["the Deno authors"]
documentation = "https://docs.rs/deno_task_shell"
edition = "2021"
homepage = "https://deno.land/"
license = "MIT"
repository = "https://github.com/denoland/deno_task_shell"
description = "Cross platform scripting for deno task"

[features]
default = ["shell"]
shell = ["futures", "glob", "os_pipe", "path-dedot", "tokio", "tokio-util"]
serialization = ["serde"]

[dependencies]
futures = { version = "0.3.31", optional = true }
glob = { version = "0.3.1", optional = true }
path-dedot = { version = "3.1.1", optional = true }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"], optional = true }
tokio-util = { version = "0.7.12", optional = true }
os_pipe = { version = "1.2.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2.0.3"
pest = { version="2.7.13", features = ["miette-error"] }
pest_derive = "2.7.12"
dirs = "5.0.1"
pest_ascii_tree = "0.1.0"
miette = { version = "7.2.0", features = ["fancy"] }
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.12.0"
parking_lot = "0.12.3"
serde_json = "1.0.128"
pretty_assertions = "1.0.0"
