[package]
name = "shell"
version = "0.1.0"
edition.workspace = true
authors = ["The prefix-dev/shell team <hi@prefix.dev>"]
description = "A cross-platform, bash compatible shell"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
default-run = "shell"
publish = false

[lib]
name = "shell"
path = "src/lib.rs"

[[bin]]
name = "shell"
path = "src/main.rs"

[features]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
deno_task_shell = { path = "../deno_task_shell", features = ["shell"] }
futures = "0.3.30"
rustyline = { version = "14.0.0", features = ["derive"] }
tokio = "1.40.0"
uu_ls = "0.0.27"
dirs = "5.0.1"
which = "6.0.3"
uu_uname = "0.0.27"
uu_date = "0.0.27"
ctrlc = "3.4.5"
miette = { version="7.2.0", features = ["fancy"] }

[package.metadata.release]
# Dont publish the binary
release = false
