[package]
name = "shell"
version = "0.1.0"
edition.workspace = true
authors = ["The prefix-dev/shell team <hi@prefix.dev>"]
description = "A cross-platform, bash compatible shell"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
default-run = "shell"
publish = false

[lib]
name = "shell"
path = "src/lib.rs"

[[bin]]
name = "shell"
path = "src/main.rs"

[features]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
deno_task_shell = { path = "../deno_task_shell", features = ["shell"] }
futures = "0.3.30"
rustyline = { version = "14.0.0", features = ["derive"] }
tokio = "1.40.0"
uu_ls = "0.0.27"
dirs = "5.0.1"
which = "6.0.3"
uu_uname = "0.0.27"
uu_touch = "0.0.27"
uu_date = "0.0.27"
miette = { version = "7.2.0", features = ["fancy"] }
filetime = "0.2.25"
chrono = "0.4.38"
parse_datetime = "0.6.0"
dtparse = "2.0.1"
windows-sys = "0.59.0"
ctrlc = "3.4.5"
uu_printenv = "0.0.29"

[package.metadata.release]
# Dont publish the binary
release = false
