[package]
name = "shell"
version = "0.1.0"
edition.workspace = true
authors = ["The prefix-dev/shell team <hi@prefix.dev>"]
description = "A cross-platform, bash compatible shell"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
default-run = "shell"
publish = false

[lib]
name = "shell"
path = "src/lib.rs"

[[bin]]
name = "shell"
path = "src/main.rs"

[features]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
deno_task_shell = { path = "../deno_task_shell", features = ["shell"] }
futures = "0.3.31"
rustyline = { version = "15.0.0", features = ["derive"] }
tokio = "1.43.0"
uu_ls = "0.0.29"
dirs = "6.0.0"
which = "7.0.1"
uu_uname = "0.0.29"
uu_touch = "0.0.29"
uu_date = "0.0.29"
miette = { version = "7.5.0", features = ["fancy"] }
filetime = "0.2.25"
chrono = "0.4.39"
parse_datetime = "0.7.0"
dtparse = "2.0.1"
windows-sys = "0.59.0"
ctrlc = "3.4.5"

[package.metadata.release]
# Dont publish the binary
release = false
