[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_task_shell = { path = "../deno_task_shell", features = ["shell"] }
shell = { path = "../shell" }
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
dirs = "5.0.1"
miette = "7.2.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
tempfile = "3.12.0"
