[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_task_shell = { path = "../deno_task_shell", features = ["shell"] }
shell = { path = "../shell" }
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
dirs = "6.0.0"
miette = "7.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.16.0"
